fix: Extra space above flipped perp room
Flipping perspective could sometimes give a bunch of weird, extra  space
above the page.  Changed align-items to fix.

--- a/resources/assets/sass/components/_room-workspace.scss
+++ b/resources/assets/sass/components/_room-workspace.scss
@@ -1,8 +1,8 @@
 .room-workspace {
   display:flex;
-  // justify-content:center;
-  // flex-wrap:wrap;
+  align-items:flex-start;
   @media(max-width:$desktop) {
+    align-items:stretch;
     flex-direction: column;
   }
   .room-workspace-left, .room-workspace-right {
